# fastapi-event-handling

./: README.md  pyproject.toml
long_polling/: client.py  main.py
polling/: client.py  main.py
server-sent-event/: client.py  main.py
websocket/: client.py  main.py
